--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "name": "Client",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "client.exe",
+            "program": "${workspaceFolder}/client/debug/client.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
@@ -21,7 +21,7 @@
             "name": "Server",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "server.exe",
+            "program": "${workspaceFolder}/server/debug/server.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
