--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,33 +1,29 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
-        
+    "configurations": [        
         {
             "name": "Client",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/client/debug/client.exe",
+            "program": "${workspaceFolder}/client_debug/client.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
             "preLaunchTask": "client Debug",
-            "externalConsole": true
+            "externalConsole": false
         },
         {
             "name": "Server",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/server/debug/server.exe",
+            "program": "${workspaceFolder}/server_debug/server.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
             "preLaunchTask": "server Debug",
-            "externalConsole": true
+            "externalConsole": false
         }
     ]
 }
