--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -1,4 +1,148 @@
 {
+    "c-cpp-flylint.cppcheck.includePaths": [
+        "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/VC/Tools/MSVC/14.16.27023/include",
+        "D:/Software/Qt/5.12.0/msvc_static/include",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DAnimation",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DCore",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DExtras",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DInput",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DLogic",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DQuick",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DQuickAnimation",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DQuickExtras",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DQuickInput",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DQuickRender",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DQuickScene2D",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DRender",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtAccessibilitySupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtANGLE",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtBluetooth",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtCharts",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtConcurrent",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtCore",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtDataVisualization",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtDeviceDiscoverySupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtEglSupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtEventDispatcherSupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtFbSupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtFontDatabaseSupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtGui",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtHelp",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtLocation",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtMultimedia",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtMultimediaWidgets",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtNetwork",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtNetworkAuth",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtNfc",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtOpenGL",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtOpenGLExtensions",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtPacketProtocol",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtPlatformCompositorSupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtPlatformHeaders",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtPositioning",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtPrintSupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtPurchasing",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtQml",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtQmlDebug",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtQuick",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtQuickControls2",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtQuickParticles",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtQuickTemplates2",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtQuickTest",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtQuickWidgets",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtRemoteObjects",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtRepParser",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtScxml",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtSensors",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtSql",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtSvg",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtTest",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtThemeSupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtUiPlugin",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtUiTools",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtWebChannel",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtWebSockets",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtWebView",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtWidgets",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtXml",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtXmlPatterns",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtZlib",
+        "C:/Program Files (x86)/Windows Kits/10/Include/10.0.17763.0/shared",
+        "C:/Program Files (x86)/Windows Kits/10/Include/10.0.17763.0/ucrt",
+        "C:/Program Files (x86)/Windows Kits/10/Include/10.0.17763.0/um",
+        "${workspaceRoot}"],
+    "c-cpp-flylint.clang.includePaths": [
+        "C:/Program Files (x86)/Microsoft Visual Studio/2017/Community/VC/Tools/MSVC/14.16.27023/include",
+        "D:/Software/Qt/5.12.0/msvc_static/include",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DAnimation",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DCore",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DExtras",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DInput",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DLogic",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DQuick",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DQuickAnimation",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DQuickExtras",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DQuickInput",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DQuickRender",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DQuickScene2D",
+        "D:/Software/Qt/5.12.0/msvc_static/include/Qt3DRender",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtAccessibilitySupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtANGLE",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtBluetooth",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtCharts",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtConcurrent",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtCore",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtDataVisualization",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtDeviceDiscoverySupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtEglSupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtEventDispatcherSupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtFbSupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtFontDatabaseSupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtGui",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtHelp",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtLocation",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtMultimedia",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtMultimediaWidgets",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtNetwork",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtNetworkAuth",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtNfc",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtOpenGL",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtOpenGLExtensions",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtPacketProtocol",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtPlatformCompositorSupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtPlatformHeaders",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtPositioning",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtPrintSupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtPurchasing",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtQml",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtQmlDebug",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtQuick",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtQuickControls2",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtQuickParticles",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtQuickTemplates2",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtQuickTest",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtQuickWidgets",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtRemoteObjects",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtRepParser",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtScxml",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtSensors",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtSql",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtSvg",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtTest",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtThemeSupport",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtUiPlugin",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtUiTools",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtWebChannel",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtWebSockets",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtWebView",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtWidgets",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtXml",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtXmlPatterns",
+        "D:/Software/Qt/5.12.0/msvc_static/include/QtZlib",
+        "C:/Program Files (x86)/Windows Kits/10/Include/10.0.17763.0/shared",
+        "C:/Program Files (x86)/Windows Kits/10/Include/10.0.17763.0/ucrt",
+        "C:/Program Files (x86)/Windows Kits/10/Include/10.0.17763.0/um",
+        "${workspaceRoot}"],
     "clang-format.executable": "C:/Program Files/LLVM/bin/clang-format.exe",
     "workbench.colorTheme": "FlatUI",
     "[cpp]": {
@@ -20,7 +164,56 @@
         "iosfwd": "cpp",
         "xstring": "cpp",
         "xutility": "cpp",
-        "qobject": "cpp"
+        "qobject": "cpp",
+        "algorithm": "cpp",
+        "atomic": "cpp",
+        "chrono": "cpp",
+        "cmath": "cpp",
+        "condition_variable": "cpp",
+        "cstddef": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "cwchar": "cpp",
+        "exception": "cpp",
+        "resumable": "cpp",
+        "functional": "cpp",
+        "future": "cpp",
+        "initializer_list": "cpp",
+        "ios": "cpp",
+        "istream": "cpp",
+        "iterator": "cpp",
+        "limits": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "memory": "cpp",
+        "mutex": "cpp",
+        "new": "cpp",
+        "numeric": "cpp",
+        "ratio": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
+        "string": "cpp",
+        "xthread": "cpp",
+        "thread": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "typeinfo": "cpp",
+        "unordered_map": "cpp",
+        "utility": "cpp",
+        "variant": "cpp",
+        "xfacet": "cpp",
+        "xhash": "cpp",
+        "xiosbase": "cpp",
+        "xlocinfo": "cpp",
+        "xlocnum": "cpp",
+        "xmemory": "cpp",
+        "xmemory0": "cpp",
+        "xstddef": "cpp",
+        "xtr1common": "cpp",
+        "xtree": "cpp",
+        "qeventloop": "cpp"
     },
     "files.exclude": {
         "**/.git": true,
